--- a/style.css
+++ b/style.css
@@ -398,6 +398,7 @@ nav ul li a.active::after {
 .sorting {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .sorting-list {
@@ -452,6 +453,11 @@ select.decorated option:hover {
 
 .sorting > i:first-of-type {
   margin: 0 1.25rem 0 2.625rem;
+}
+
+.sorting > i:last-of-type {
+  padding: 0.75rem;
+  transform: rotate(90deg);
 }
 
 .sorting > i:focus {
